--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,7 +116,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-full;
   }
 }
